# DynRay

./: .gitignore  CMakeLists.txt  DynRay.cpp  vstest.runsettings
CMake/: MiscFunctions.cmake
ExampleScenes/: Plane.mtl  SuzanneAndSphere.blend
OBJLoader/: CMakeLists.txt
OBJLoader/cmake/: OBJLoaderConfig.cmake.in
OBJLoader/include/objloader/: objloader.hpp
OBJLoader/src/: objloader.cpp
cmake/: Catch2-CmakeLists.txt.in  DynRayConfig.cmake.in
demo/: CMakeLists.txt
demo/cmake/: DemosConfig.cmake.in
demo/include/demo/: demos.hpp  randomspheres.hpp  suzanne.hpp
demo/src/: demos.cpp  randomspheres.cpp  suzanne.cpp
engine/: CMakeLists.txt
engine/cmake/: DynRayConfig.cmake.in
engine/include/: dynray.hpp  renderer.hpp  scene.hpp
engine/include/engine/: camera.hpp  frame.hpp  hitrecord.hpp  light.hpp  material.hpp  object.hpp  renderer.hpp  renderoptions.hpp  scene.hpp
engine/src/: camera.cpp  dynray.cpp  light.cpp  material.cpp  object.cpp  renderer.cpp  scene.cpp
engine/test/: CMakeLists.txt
engine/test/src/: test_camera.cpp  test_dummy.cpp  test_intersect.cpp  test_light.cpp  test_normals.cpp  test_trace.cpp
profile/: CMakeLists.txt
profile/src/: main.cpp
test/: CMakeLists.txt
test/src/: test_fac.cpp  test_mul.cpp
visualizer/: CMakeLists.txt
visualizer/include/: SDLWrappers.h
visualizer/src/: Visualizer.cpp  Visualizer.h  main.cpp
visualizer/test/: CMakeLists.txt
visualizer/test/src/: test_dummy.cpp
